# DoTH-DNS

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  codecov.yml  docker-compose.nginx.yaml  docker-compose.traefik.yaml  docker-compose.yaml  menu_start_doth_dns.bash  pyproject.toml  run.sh  setup.cfg  setup.py  setup.sh  start_doth_dns.bash  start_script.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
certificates/: README.md
certificates/private/: README.md
docs/source/: api.rst  badges.rst  changelog.rst  conf.py  external_help.rst  index.rst  installation.rst  license.rst  requirements.pip  usage.rst
doh-docker/: .dockerignore  Dockerfile  docker_build.sh
doh-docker/configs/: doh-server.conf
nginx-docker/certificates/certs/: README.md
nginx-docker/configs/: nginx.conf
nginx-docker/configs/conf.d/: stapling.conf
nginx-docker/configs/sites-enabled/: DOMAIN.conf.template  HOSTNAME.dns.conf.template  HOST_IP.conf.template  http_redirect.conf  pi.hole.conf  upstream.conf
nginx-docker/configs/snippets/: cert.conf  cert_HOSTNAME.dns.conf.template  cert_pi.hole.conf  proxy_forward.conf  ssl-params.conf
nginx-docker/configs/streams/: dns-over-tls.conf  dns-over-tls.template  upstream.conf
nginx-docker/templates/: 443.conf.template  DOMAIN.conf.template  cert_DOMAIN.conf.template  cert_HOST_IP.conf.template  dns-over-tls.conf.template  http_redirect.conf.template
pihole-docker/: .gitignore  01-conf-dnsmasq.sh  02-chown-pihole-configs  default.env
pihole-docker/configs/: resolv.conf
pihole-docker/data/pihole/: pihole-FTL.conf
pihole-docker/s6_scripts/cont-init.d/: 01-conf-dnsmasq.sh  21-conf-dns.sh
pihole-docker/s6_scripts/fix-attr.d/: 02-chown-pihole-configs
pihole-docker/s6_scripts/fix-attrs.d/: 02-chown-pihole-configs
pihole-docker/scripts/s6_cont-init.d/: 01-conf-dnsmasq.sh
pihole-docker/templates/: dnsmasq.conf.template
src/container_configs/: docker-compose.yaml
src/container_configs/certificates/: README.md
src/dothdns/: __init__.py  cli.py  config.py  helpers.py  utils.py
traefik-docker/: .gitignore
traefik-docker/configs/: traefik.toml
traefik-docker/data/: traefik.toml
traefik-docker/shared/: README.md
traefik-docker/templates/: certs.toml.template
unbound-docker/: .gitignore  unbound.sh
unbound-docker/configs/: unbound.conf
unbound-docker/scripts/: unbound.sh
(+55 files in other folders)
