[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 3.4, < 4",
    "wheel >= 0.34",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "src/dothdns/version.py"
write_to_template = "__version__ = {version!r}"

# -- BLACK CONFIG ----------------------------------------------------------------------

[tool.black]
line-length = 88
exclude = "venv/"
