[metadata]
name = DoTH_DNS
description = DoTH-DNS gives you great control over your DNS traffic
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Cielquan/DoTH-DNS
author = Christian Riedel
license = GPL-3.0
license_file = LICENSE.rst
platforms = Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: Name Service (DNS)
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
keywords = DNS, docker, pi-hole, unbound, doh, dot, traefik
maintainer = Christian Riedel
maintainer-email = cielquan@protonmail.com
project_urls =
    Source=https://github.com/Cielquan/DoTH-DNS
    Documentation=https://doth-dns.readthedocs.io/
    Tracker=https://github.com/Cielquan/DoTH-DNS/issues

[options]
packages = find:
install_requires =
    click >= 7, < 8
    tzlocal>=2,<3
python_requires = ~=3.6
include_package_data = True
package_dir =
    =src

[options.entry_points]
console_scripts =
    dothdns = dothdns.cli:dothdns

[options.extras_require]
docs =
    sphinx >= 2.0, <3
    sphinx-rtd-theme >= 0.4
testing =
    pytest >= 5.0, <6
    pytest-cov >= 2.5, <3
    pytest-mock >= 2.0, <3
    pytest-xdist >= 1.31, <2

[options.package_data]
"" = container_configs/*

[options.packages.find]
where = src

[bdist_wheel]
universal = 0
